--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     "postcss-combine-media-query": "^1.0.1",
     "postcss-loader": "^5.3.0",
     "purgecss-whitelister": "^2.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.82.0",
     "sass-loader": "^11.1.1",
@@ -60,6 +58,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "react-icons": "^5.4.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.28.0"
   }
 }
